# AWorld

./: .dockerignore  .gitignore  README.md  README_zh.md  setup.py
.github/workflows/: docs.yml  tests.yml
aworld/: __init__.py  __main__.py  requirements.txt  runner.py  version_gen.py
aworld/agents/: README-multi-agent.md  aggregate_agent.py  amni_llm_agent.py  llm_agent.py  parallel_llm_agent.py  serial_llm_agent.py  task_llm_agent.py
aworld/checkpoint/: __init__.py  inmemory.py
aworld/config/: __init__.py  agent_loader.py  conf.py
aworld/core/: common.py  exceptions.py  factory.py  memory.py  model_output_parser.py  runtime_engine.py  task.py
aworld/dataset/: README.md  README_zh.md  dataloader.py  dataset.py  sampler.py  trajectory_dataset.py  types.py
aworld/evaluations/: README.md  base.py
aworld/events/: __init__.py  inmemory.py  manager.py  redis_backend.py  util.py
aworld/logs/: log.py  util.py
aworld/mcp_client/: server.py  utils.py
aworld/memory/: main.py  models.py
aworld/models/: ant_provider.py  anthropic_provider.py  llm.py  llm_http_handler.py  model_response.py  openai_provider.py  utils.py
aworld/output/: artifact.py  base.py  observer.py  outputs.py  workspace.py
aworld/planner/: plan.py
aworld/prompt/: base.py
aworld/replay_buffer/: base.py  event_replay_buffer.py
aworld/runners/: call_driven_runner.py  evaluate_runner.py  event_runner.py  state_manager.py  task_runner.py  utils.py
aworld/sandbox/: __init__.py  base.py  common.py  models.py
aworld/tools/: __init__.py  function_tools.py
aworld/trace/: README.md  base.py  config.py  function_trace.py
aworld/utils/: async_func.py  common.py  run_util.py  serialized_util.py
docs/: outline.py
docs/Quickstart/: agent_construction.md  agent_training.md  environment.md  install.md  multi-agent_system_construction.md  workflow_construction.md
env/: LICENSE  README.md  README_zh.md  run-docker.sh  run-local.sh  train_env.py
env/gaia-mcp-server/mcp_servers/documents_server/: pyproject.toml
env/gaia-mcp-server/mcp_servers/documents_server/src/: base.py  csv_server.py  docx_server.py  pdf_server.py  pptx_server.py  txt_server.py
env/gaia-mcp-server/mcp_servers/e2b_code_server/: pyproject.toml
env/gaia-mcp-server/mcp_servers/e2b_code_server/src/: main.py
env/gaia-mcp-server/mcp_servers/image_server/: pyproject.toml
env/gaia-mcp-server/mcp_servers/image_server/src/: main.py  utils.py
env/gaia-mcp-server/mcp_servers/intelligence_server/: pyproject.toml
env/gaia-mcp-server/mcp_servers/intelligence_server/src/: code.py  guard.py  think.py
env/gaia-mcp-server/mcp_servers/media_server/: pyproject.toml
env/gaia-mcp-server/mcp_servers/media_server/src/: audio.py  image.py  video.py
env/gaia-mcp-server/mcp_servers/wiki_server/: pyproject.toml
env/gaia-mcp-server/mcp_servers/wiki_server/src/: base.py  wiki.py
env/virtualpc-mcp/container_server/: Dockerfile_container_server  pyproject.toml
env/virtualpc-mcp/container_server/src/container_server/: configs.py  container_server_manager.py  main.py
env/virtualpc-mcp/container_server/src/container_server/dockers/: docker_helper.py
env/virtualpc-mcp/container_server/src/container_server/routers/: api_server.py
env/virtualpc-mcp/mcp_gateway/: Dockerfile_mcp_gateway  pyproject.toml
env/virtualpc-mcp/mcp_gateway/src/mcp_gateway/: configs.py  main.py  mcp_gateway.py
env/virtualpc-mcp/mcp_gateway/src/mcp_gateway/auth/: check_auth.py
env/virtualpc-mcp/mcp_gateway/src/mcp_gateway/containers/: __init__.py  container_server_manager.py
env/virtualpc-mcp/mcp_gateway/src/mcp_gateway/routers/: dashboard.py  gateway_api.py  novnc_proxy_pass.py
env/virtualpc-mcp/mcp_gateway/src/mcp_gateway/sessions/: __init__.py  session_connection.py  session_connection_manager.py
env/virtualpc-mcp/mcp_gateway/src/mcp_gateway/utils/: common_utils.py  proxy_utils.py
env/virtualpc-mcp/mcp_gateway/tests/auth/: auth_test.py
env/virtualpc-mcp/mcp_gateway/tests/local/: gen_token.py
env/virtualpc-mcp/mcp_server/mcp_server_proxy/: pyproject.toml
env/virtualpc-mcp/mcp_server/mcp_server_proxy/src/mcp_server_proxy/: configs.py  main.py  mcp_server_executor.py  mcp_server_loader.py  mcp_server_proxy.py
env/virtualpc-mcp/mcp_server/mcp_server_proxy/tests/core/: mcp_client.py  stdio_server_test.py  test_data.py
env/virtualpc-mcp/mcp_server/mcp_server_proxy/tests/local/: mcp_test.py
env/virtualpc-mcp/mcp_server/mcp_server_proxy/tests/mcp/: mcp_server_test.py
examples/BFCL/: run.py
tests/: base_test.py  test_state_manager.py
train/: README.md  README_zh.md  train_env.py
(+484 files in other folders)
