[project]
name = "container-server"
version = "0.1.0"
description = "Container Server"
requires-python = ">=3.12"
dependencies = [
    "docker",
    "aiohttp",
    "pydantic",
    "pydantic-settings",
    "fastapi[standard]",
    "python-dotenv",
    "websockets",
    "pyyaml",
    "mcp>=1.12.2",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"