[project]
name = "mcp-gateway-server"
version = "0.1.0"
description = "MCP Gateway Server"
requires-python = ">=3.12"
dependencies = [
    "docker",
    "aiohttp",
    "pydantic",
    "pydantic-settings",
    "fastapi[standard]",
    "typer",
    "aiofiles",
    "python-dotenv",
    "websockets",
    "pyyaml",
    "mcp>=1.12.2",
    "httpx[http2]",
    "pyjwt>=2.10.1",
    "redis>=6.4.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
mcp-gateway = "mcp_gateway.main:app"
