[project]
name = "documents-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
aiohttp= ">=3.12.15"
dependencies = [
    "mcp",
    "aiohttp~=3.12.15",
    "requests~=2.32.4",
    "fastmcp~=2.11.3",
    "chardet~=3.0.4",
    "pandas~=2.3.0",
    "python-magic~=0.4.27",
    "python-docx~=1.2.0",
    "filetype~=1.2.0",
    "datalab-python-sdk~=0.1.4",
    "python-pptx~=1.0.2",


]
