[project]
name = "e2b-code-server"
version = "0.1.0"
description = "Run code in a specified e2b sandbox."
readme = "README.md"
requires-python = ">=3.12"
aiohttp= ">=3.12.15"
dependencies = [
    "mcp",
    "Pillow~=10.4.0",
    "requests~=2.32.4",
    "openai~=1.93.0",
    "fastmcp~=2.11.3",
    "e2b-code-interpreter~=1.2.0",
]

