[project]
name = "image-server"
version = "0.1.0"
description = "Solve the question by careful reasoning given the image(s) in given local filepath or url, including reasoning, ocr, etc."
readme = "README.md"
requires-python = ">=3.12"
aiohttp= ">=3.12.15"
dependencies = [
    "mcp",
    "Pillow~=10.4.0",
    "requests~=2.32.4",
    "openai~=1.93.0",
    "fastmcp~=2.11.3",
]



