[project]
name = "media-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
aiohttp= ">=3.12.15"
dependencies = [
    "mcp",
    "aiohttp~=3.12.15",
    "requests~=2.32.4",
    "fastmcp~=2.11.3",
    "python-magic~=0.4.27",
    "chardet~=3.0.4",
    "pandas~=2.3.0",
    "numpy~=2.2.3",
    "openai~=1.93.0",
    "pytesseract~=0.3.10",
    "pillow~=10.4.0",
    "opencv-python~=4.12.0.88",
    "opencv-python-headless~=4.12.0.88",

]
