[project]
name = "wiki-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
aiohttp= ">=3.12.15"
dependencies = [
    "mcp",
    "aiohttp~=3.12.15",
    "requests~=2.32.4",
    "fastmcp~=2.11.3",
    "python-magic~=0.4.27",
    "beautifulsoup4~=4.12.3",
    "waybackpy~=3.0.6",
    "wikipedia~=1.4.0",
    "pandas~=2.3.0",
    "chardet"
]
