[project]
name = "mcp-proxy"
version = "0.1.0"
description = "MCP Proxy"
requires-python = ">=3.12"
dependencies = [
    "docker",
    "aiohttp",
    "playwright==1.52",
    "pydantic",
    "pydantic-settings",
    "fastapi[standard]",
    "typer",
    "aiofiles",
    "python-dotenv",
    "websockets",
    "pyyaml",
    "mcp==1.12.4",
    "httpx[http2]",
    "requests>=2.32.5",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"